crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_block_let.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = <p>@if x { let y }</p>"
---
alder::syntax

  × I was expecting `=` after this binding
   ╭─[/project/src/main.ald:1:30]
 1 │ let value = <p>@if x { let y }</p>
   ·                        ┬     ┬
   ·                        │     ╰── expected `=`
   ·                        ╰── this binding starts here
   ╰────
