crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_close_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let value = <div></div x>
---
alder::syntax

  × I was expecting `>` after this closing tag's name
   ╭─[/project/src/main.ald:1:24]
 1 │ let value = <div></div x>
   ·             ┬          ┬
   ·             │          ╰── expected `>`
   ·             ╰── this markup starts here
   ╰────
