crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_close_name.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let value = <div></>
---
alder::syntax

  × I was expecting an element name in this closing tag
   ╭─[/project/src/main.ald:1:20]
 1 │ let value = <div></>
   ·             ┬      ┬
   ·             │      ╰── expected a name after `</`
   ·             ╰── this markup starts here
   ╰────
