crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_for_body.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = <ul>@for x in xs ]</ul>"
---
alder::syntax

  × I was expecting `{` to start this markup child block
   ╭─[/project/src/main.ald:1:30]
 1 │ let value = <ul>@for x in xs ]</ul>
   ·                 ┬            ┬
   ·                 │            ╰── expected `{`
   ·                 ╰── this `@for` starts here
   ╰────
